# bullseye-fiducials

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bullseye-fiducials.cpp
demos/: blobDetector.py  blobDetectorDemo.py  groundTruth.json
demos/accuracyTest/: blobDetector.py  config.json  patternDetection.py  runAccuracy.py
demos/accuracyTest/utils/: binaryBlobDetector.py
include/: capture.hpp  detection.hpp  undistort.hpp  visuals.hpp
scripts/: build.sh  install.sh
src/: bullseye-fiducials.cpp  capture.cpp  detection.cpp  detection.hpp  undistort.cpp  visuals.cpp
src/test/: distort-test.cpp
